New and improved

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Home</title>
 </head>
 <body>
-
+    <!-- Hamburger menu isn't working -->
     <header>
         <nav class=" navbar navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="index.html">Eric Zagala</a>
@@ -35,7 +35,7 @@
 
     <section class="container main">
         <div class="row justify-content-around">
-            <div class="col-sm col-md-8">
+            <div class="col-sm col-md-7">
                 <h1>Eric Zagala</h1>
                 <hr>
                 <img src="assets/images/profilePic.jpg" alt="Picture of Eric" id="profilePic">
@@ -48,23 +48,40 @@
                  </p>
             </div>
             <div class="col-sm col-md-4">
-                <h2>Contact</h2>
+                <h2>Connect</h2>
                 <hr> 
-                <ul>
-                    <li id="contactLink"><a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a></li>
-                    <li id="contactLink"><a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a></li>
-                    <li id="contactLink"><address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address></li>
-                </ul>
+                <div class="row justify-content-center">
+                    <div class="col-xm offset-1">
+                        <a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a>
+                    </div>
+                    <div class="col-xm offset-1">
+                        <a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a>
+                    </div>
+                    <div class="col-xm offset-1">
+                        <address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
     <footer class="footer">
         <div class="container">
-            <span class="text-muted">Copywrite 2018 Eric Zagala</span>
+            <div class="row justify-content-center">
+                <span class="text-muted">Copywrite 2018 Eric Zagala</span>
+            </div>
         </div>
     </footer>
 
-    
+        
 </body>
 </html>
+
+<!-- <ul>
+    <li id="contactLink"><a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a>
+    </li>
+    <li id="contactLink"><a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a>
+    </li>
+    <li id="contactLink"><address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address>
+    </li>
+</ul>    -->
