--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,9 @@
 
     <div class="container main">
         <div class="row">
-            <div class="col-sm col-md-8">
+            <div class="col-xm col-md-8">
+                <h1>Contact</h1>
+                <hr>
                 <form>
                     <div class="form-group">
                         <label for="Name">Name</label>
@@ -53,20 +55,30 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
             </div>
-            <div class="col-sm col-md-4">
-                <h2>Contact</h2>
+            <div class="col-xm col-md-4">
+                <h2>Connect</h2>
                 <hr> 
-                <ul>
-                    <li id="contactLink"><a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a></li>
-                    <li id="contactLink"><a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a></li>
-                    <li id="contactLink"><address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address></li>
-                </ul>
+                <div class="row justify-content-center">
+                    <div class="col-xm offset-1">
+                        <a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a>
+                    </div>
+                    <div class="col-xm offset-1">
+                        <a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a>
+                    </div>
+                    <div class="col-xm offset-1">
+                        <address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address>
+                    </div>
+                </div>
             </div>
         </div>
     </div> 
 
-    <footer>
-        <span class="text-muted">Copywrite 2018 Eric Zagala</span>
+    <footer class="footer">
+        <div class="container">
+            <div class="row justify-content-center">
+                <span class="text-muted">Copywrite 2018 Eric Zagala</span>
+            </div>
+        </div>
     </footer>
 
 </body>
