--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/layout.css">
     <link rel="stylesheet" type="text/css" href="assets/color.css">
-    <title>Portfolio</title>
+    <title>Home</title>
 </head>
 <body>
-
+    <!-- Hamburger menu isn't working -->
     <header>
-        <nav class=" navbar navbar-expand-md navbar-light">
+        <nav class=" navbar navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="index.html">Eric Zagala</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item active  ">
+                    <li class="nav-item active">
                         <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-itm">
@@ -33,45 +33,82 @@
         </nav>
     </header>
 
-    <div class="container main">
-        <div class="row">
-            <div class="col-sm col-md-6">
-                <section class=" folioGrid">
-                    <h1>
-                        Portfolio
-                    </h1>
-                    <div class="row ">
-                        <div class="col-md-4"><img src="assets/images/portfolio.png"></div>
-                        <div class="col-md-4"><img src="assets/images/portfolio.png"></div>
-                        <div class="col-md-4"><img src="assets/images/portfolio.png"></div>
+    <section class="container main">
+        <div class="row justify-content-around">
+            <div class="col-sm col-md-7">
+                <h1>Portfolio</h1>
+                <hr>
+                <div class="row">
+                    <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                    <div class="col-sm "><img src="assets/images/portfolio.png"></div>
+                    <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                </div>
+                <div class="row">
+                    <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                    <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                    <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                </div> 
+                <div class="row">
+                    <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                    <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                    <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                </div>
+            </div>
+            <div class="col-sm col-md-4">
+                <h2>Connect</h2>
+                <hr> 
+                <div class="row justify-content-center">
+                    <div class="col-xm offset-1">
+                        <a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a>
                     </div>
-                    <div class="row">
-                        <div class="col-md-4"><img src="assets/images/portfolio.png"></div>
-                        <div class="col-md-4"><img src="assets/images/portfolio.png"></div>
-                        <div class="col-md-4"><img src="assets/images/portfolio.png"></div>
+                    <div class="col-xm offset-1">
+                        <a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a>
                     </div>
-                    <div class="row">
-                        <div class="col-md-4"><img src="assets/images/portfolio.png"></div>
-                        <div class="col-md-4"><img src="assets/images/portfolio.png"></div>
-                        <div class="col-md-4"><img src="assets/images/portfolio.png"></div>
+                    <div class="col-xm offset-1">
+                        <address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address>
                     </div>
-                </section>
+                </div>
             </div>
         </div>
-        <div class="col-sm col-md-3">
-            <h2>Contact</h2>
-            <hr> 
-            <ul>
-                <li id="contactLink"><a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a></li>
-                <li id="contactLink"><a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a></li>
-                <li id="contactLink"><address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address></li>
-            </ul>
-        </div>
-    </div>
+    </section>
 
-    <footer>
-        <span class="text-muted">Copywrite 2018 Eric Zagala</span>
+    <footer class="footer">
+        <div class="container">
+            <div class="row justify-content-center">
+                <span class="text-muted">Copywrite 2018 Eric Zagala</span>
+            </div>
+        </div>
     </footer>
 
+        
 </body>
 </html>
+
+<!-- <ul>
+    <li id="contactLink"><a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a>
+    </li>
+    <li id="contactLink"><a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a>
+    </li>
+    <li id="contactLink"><address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address>
+    </li>
+</ul>    -->
+
+
+<!-- <h1>
+                        Portfolio
+                    </h1>
+                    <div class="row">
+                        <div class="col-xm"><img src="assets/images/portfolio.png"></div>
+                        <div class="col-sm "><img src="assets/images/portfolio.png"></div>
+                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                    </div> 
+                    <div class="row">
+                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                    </div> -->
