Linked RPG in portfolio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>Home</title>
 </head>
 <body>
-    <!-- Hamburger menu isn't working -->
     <header>
         <nav class=" navbar navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="index.html">Eric Zagala</a>
@@ -25,7 +24,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-itm">
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -35,19 +34,13 @@
 
     <section class="container main">
         <div class="row justify-content-around">
-            <div class="col-sm col-md-7">
+            <div class="col-xm col-md-7">
                 <h1>Eric Zagala</h1>
                 <hr>
                 <img src="assets/images/profilePic.jpg" alt="Picture of Eric" id="profilePic">
-                <p>
-                    BodLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, 
-                </p>
-                <p>
-                    BodLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                    parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                 </p>
+                <p>Hello! There's going to be more meaningful words here in the very near future.</p>
             </div>
-            <div class="col-sm col-md-4">
+            <div class="col-xm col-md-3">
                 <h2>Connect</h2>
                 <hr> 
                 <div class="row justify-content-center">
