--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/layout.css">
     <link rel="stylesheet" type="text/css" href="assets/color.css">
-    <title>Home</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <!-- Hamburger menu isn't working -->
@@ -15,7 +15,7 @@
         <nav class=" navbar navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="index.html">Eric Zagala</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
@@ -35,11 +35,11 @@
 
     <section class="container main">
         <div class="row justify-content-around">
-            <div class="col-sm col-md-7">
+            <div class="col-xm col-md-7">
                 <h1>Portfolio</h1>
                 <hr>
                 <div class="row">
-                    <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                    <a href="https://ezagala.github.io/weekFourGame/" target="_blank" title="Role Playing Game"><div class="col-sm"><img src="assets/images/rpgProject.png"></div></a>
                     <div class="col-sm "><img src="assets/images/portfolio.png"></div>
                     <div class="col-sm"><img src="assets/images/portfolio.png"></div>
                 </div>
@@ -54,7 +54,7 @@
                     <div class="col-sm"><img src="assets/images/portfolio.png"></div>
                 </div>
             </div>
-            <div class="col-sm col-md-4">
+            <div class="col-xm col-md-4">
                 <h2>Connect</h2>
                 <hr> 
                 <div class="row justify-content-center">
@@ -84,31 +84,9 @@
 </body>
 </html>
 
-<!-- <ul>
-    <li id="contactLink"><a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a>
-    </li>
-    <li id="contactLink"><a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a>
-    </li>
-    <li id="contactLink"><address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address>
-    </li>
-</ul>    -->
+<!-- 
 
-
-<!-- <h1>
-                        Portfolio
-                    </h1>
-                    <div class="row">
-                        <div class="col-xm"><img src="assets/images/portfolio.png"></div>
-                        <div class="col-sm "><img src="assets/images/portfolio.png"></div>
-                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
-                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
-                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
-                    </div> 
-                    <div class="row">
-                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
-                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
-                        <div class="col-sm"><img src="assets/images/portfolio.png"></div>
-                    </div> -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+ -->
