--- a/portfolio.html
+++ b/portfolio.html
@@ -39,9 +39,15 @@
                 <h1>Portfolio</h1>
                 <hr>
                 <div class="row">
-                    <a href="https://ezagala.github.io/weekFourGame/" target="_blank" title="Role Playing Game"><div class="col-sm"><img src="assets/images/rpgProject.png"></div></a>
-                    <a href="https://ezagala.github.io/triviaGame/" target="_blank" title="Coffee Trivia!"></a><div class="col-sm "><img src="assets/images/coffeeTrivia.png"></div>
-                    <div class="col-sm"><img src="assets/images/portfolio.png"></div>
+                    <div class="col-sm">
+                            <a href="https://ezagala.github.io/weekFourGame/" target="_blank" title="Role Playing Game"><img src="assets/images/rpgProject.png"></a>
+                    </div>
+                    <div class="col-sm ">
+                        <a href="https://ezagala.github.io/triviaGame/" target="_blank" title="Coffee Trivia!"><img src="assets/images/coffeeTrivia.png"></a>
+                    </div>
+                    <div class="col-sm">
+                        <img src="assets/images/portfolio.png">
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-sm"><img src="assets/images/portfolio.png"></div>
