A bit of polish

--- a/index.html
+++ b/index.html
@@ -1,80 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/layout.css">
     <link rel="stylesheet" type="text/css" href="assets/color.css">
     <title>Home</title>
 </head>
-<body>
-    <header>
-        <nav class=" navbar navbar-expand-sm navbar-light">
-            <a class="navbar-brand" href="index.html">Eric Zagala</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
 
-    <section class="container main">
-        <div class="row justify-content-around">
-            <div class="col-xm col-md-7">
-                <h1>Eric Zagala</h1>
-                <hr>
-                <img src="assets/images/profilePic.jpg" alt="Picture of Eric" id="profilePic">
-                <p>Hello! There's going to be more meaningful words here in the very near future.</p>
-            </div>
-            <div class="col-xm col-md-3">
-                <h2>Connect</h2>
-                <hr> 
+<body>
+    <!-- These wrappers are used to hide the scroll bar. -->
+    <div id="wrapperOne">
+        <div id="wrapperTwo">
+            <header>
+                <nav class=" navbar navbar-light">
+                    <a class="navbar-brand" href="index.html">
+                        <img src='./assets/images/ezLogo.jpg'alt="Eric's Logo" height="66" width="99">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav navbar-right">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="index.html">Home
+                                    <span class="sr-only">(current)</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>
+
+            <section class="container main">
+                <div class="row justify-content-around">
+                    <img src="assets/images/profilePic.jpg" alt="Picture of Eric" id="profilePic">
+                </div>
                 <div class="row justify-content-center">
-                    <div class="col-xm offset-1">
-                        <a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a>
-                    </div>
-                    <div class="col-xm offset-1">
-                        <a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a>
-                    </div>
-                    <div class="col-xm offset-1">
-                        <address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address>
+                    <div class="col-xm col-md-7">
+                        <h1 id="hello">Hello.</h1>
+                        <p id="blurb">There's going to be more meaningful words here in the very near future.</p>
                     </div>
                 </div>
-            </div>
+                <div class="row justify-content-around">
+                    <div class="col-xm col-md-3">
+                        <h3 id="connect"> Connect</h3>
+                        <div class="row justify-content-center">
+                            <div class="col-xm">
+                                <a href="https://github.com/ezagala" target="_blank">
+                                    <img src="assets/images/gitIcon.png" alt="Github icon" height="40" width="40" class="icon">
+                                </a>
+                            </div>
+                            <div class="col-xm">
+                                <a href="https://www.linkedin.com/in/ericzagala/" target="_blank">
+                                    <img src="assets/images/linkedInIcon.png" alt="Linked in icon" height="40" width="40" class="icon">
+                                </a>
+                            </div>
+                            <div class="col-xm">
+                                <address>
+                                    <a href="mailto:ejzagala@gmail.com" target="_blank">
+                                        <img src="assets/images/gmailIcon.png" alt="Gmail icon" height="40" width="40" class="icon">
+                                    </a>
+                                </address>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
-    </section>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="row justify-content-center">
-                <span class="text-muted">Copywrite 2018 Eric Zagala</span>
-            </div>
-        </div>
-    </footer>
-
-        
+    </div>
+    <script src="./script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
-</html>
 
-<!-- <ul>
-    <li id="contactLink"><a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a>
-    </li>
-    <li id="contactLink"><a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a>
-    </li>
-    <li id="contactLink"><address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address>
-    </li>
-</ul>    -->
+</html>
