--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,9 @@
     <!-- Hamburger menu isn't working -->
     <header>
         <nav class=" navbar navbar-expand-sm navbar-light">
-            <a class="navbar-brand" href="index.html">Eric Zagala</a>
+            <a class="navbar-brand" href="index.html">
+                <img src='./assets/images/ezLogo.jpg' alt="Eric's Logo" height="75" width="100"> 
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
