--- a/contact.html
+++ b/contact.html
@@ -1,86 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/layout.css">
-    <link rel="stylesheet" type="text/css" href="assets/color.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="assets/layout.css">
+        <link rel="stylesheet" type="text/css" href="assets/color.css">
     <title>Contact</title>
 </head>
 <body>
-
     <header>
-        <nav class=" navbar navbar-expand-md navbar-light">
-            <a class="navbar-brand" href="index.html">Eric Zagala</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class=" navbar navbar-light">
+            <a class="navbar-brand" href="index.html">
+                <img src='./assets/images/ezLogo.jpg' alt="Eric's Logo" height="66" width="99">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav navbar-right">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-itm active">
-                        <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                        <span class="sr-only">(current)</span>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-
     <div class="container main">
         <div class="row">
             <div class="col-xm col-md-8">
                 <h1>Contact</h1>
                 <hr>
-                <form>
+                <form action="https://formspree.io/ejzagala@gmail.com" method="POST">
                     <div class="form-group">
                         <label for="Name">Name</label>
-                        <input type="text" class="form-control" placeholder="Name">
+                        <input type="text" class="form-control" placeholder="Name" name="nameField">
                     </div>
                     <div class="form-group">
                         <label for="Email">Email</label>
-                        <input type="email" class="form-control" placeholder="Email">
+                        <input type="email" class="form-control" placeholder="Email" name="emailField">
                     </div>
                     <div class="form-group">
                         <label for="text">Message</label>
-                        <input type="text" class="form-control" placeholder="Message">
-                        <textarea class="form-control" rows="5"></textarea>
+                        <input type="text" class="form-control" placeholder="Subject" name="subjectLine">
+                        <textarea class="form-control" rows="5" placeholder="I'm flattered! Tell me, what can I do for you?" name="messageBody"></textarea>
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button>
-                </form>
+                </form> 
             </div>
-            <div class="col-xm col-md-4">
-                <h2>Connect</h2>
-                <hr> 
+            <div class="col-xm col-md-3">
+                <h1 id="connect">Connect</h1>
+                <hr>
                 <div class="row justify-content-center">
-                    <div class="col-xm offset-1">
-                        <a href="https://github.com/ezagala" target="_blank"><img src="assets/images/gitIcon.png" alt="Github icon"></a>
+                    <div class="col-xm">
+                        <a href="https://github.com/ezagala" target="_blank">
+                            <img src="assets/images/gitIcon.png" alt="Github icon" height="40" width="40" class="icon">
+                        </a>
                     </div>
-                    <div class="col-xm offset-1">
-                        <a href="https://www.linkedin.com/in/ericzagala/" target="_blank"><img src="assets/images/linkedInIcon.png" alt="Linked in icon"></a>
+                    <div class="col-xm">
+                        <a href="https://www.linkedin.com/in/ericzagala/" target="_blank">
+                            <img src="assets/images/linkedInIcon.png" alt="Linked in icon" height="40" width="40" class="icon">
+                        </a>
                     </div>
-                    <div class="col-xm offset-1">
-                        <address><a href="mailto:ejzagala@gmail.com" target="_blank"><img src="assets/images/gmailIcon.png" alt="Gmail icon"></a></address>
+                    <div class="col-xm">
+                        <address>
+                            <a href="mailto:ejzagala@gmail.com" target="_blank">
+                                <img src="assets/images/gmailIcon.png" alt="Gmail icon" height="40" width="40" class="icon">
+                            </a>
+                        </address>
                     </div>
                 </div>
             </div>
         </div>
-    </div> 
-
-    <footer class="footer">
-        <div class="container">
-            <div class="row justify-content-center">
-                <span class="text-muted">Copywrite 2018 Eric Zagala</span>
-            </div>
-        </div>
-    </footer>
-
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 </html>
-
