--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
                 <div class="row justify-content-center">
                     <div class="col-xm col-md-7">
                         <h1 id="hello">Hello.</h1>
-                        <p id="blurb">There's going to be more meaningful words here in the very near future.</p>
+                        <p id="blurb">
+                            I'm Eric. I'm a web developer based in Denver, CO. My intent is to write code that will help cities become more just, efficient and livible places. I'm currently working with <a href="https://www.thegrowhaus.org/" target=_blank rel="noopener noreferrer">The GrowHaus</a> to devise intuitive ways to show how their resources are distributed throughout the <a href="http://denvermetrodata.org/neighborhood/globeville" target=_blank rel="noopener noreferrer">Globeville</a> and <a href="http://denvermetrodata.org/neighborhood/elyria-swansea" target=_blank rel="noopener noreferrer">Elyria-Swansea</a> neighborhoods, in addition to the city at large. Check out the project <a href="https://github.com/ezagala/intoTheGrowHaus" target=_blank rel="noopener noreferrer">here</a>. 
+                        </p>
+                        <p>
+                            Other projects, like an <a href="https://github.com/ezagala/bookList" target=_blank rel="noopener noreferrer">interactive reading list</a> and an <a href="https://github.com/ezagala/NYTreactApp" target=_blank rel="noopener noreferrer">app</a> that queries the New York Times' archives, are available for viewing on GitHub. 
+                        </p>
                     </div>
                 </div>
                 <div class="row justify-content-around">
