Tweak here and there

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <div id="wrapperOne">
         <div id="wrapperTwo">
             <header>
-                <nav class=" navbar navbar-light">
+                <nav class=" navbar navbar-expand-lg navbar-light">
                     <a class="navbar-brand" href="index.html">
                         <img src='./assets/images/ezLogo.jpg' alt="Eric's Logo" height="66" width="99">
                     </a>
@@ -26,7 +26,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav navbar-right">
+                        <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
