--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="wrapperOne">
         <div id="wrapperTwo">
             <header>
-                <nav class=" navbar navbar-light">
+                <nav class=" navbar navbar-expand-lg navbar-light">
                     <a class="navbar-brand" href="index.html">
                         <img src='./assets/images/ezLogo.jpg'alt="Eric's Logo" height="66" width="99">
                     </a>
@@ -26,8 +26,8 @@
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav navbar-right">
+                    <div class="collapse navbar-collapse " id="navbarNav">
+                        <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
                                 <a class="nav-link" href="index.html">Home
                                     <span class="sr-only">(current)</span>
@@ -49,10 +49,10 @@
                     <div class="col-xm col-md-7">
                         <h1 id="hello">Hello.</h1>
                         <p id="blurb">
-                            I'm Eric. I'm a web developer based in Denver, CO. My intent is to write code that will help cities become more just, efficient and livible places. I'm currently working with <a href="https://www.thegrowhaus.org/" target=_blank rel="noopener noreferrer">The GrowHaus</a> to devise intuitive ways to show how their resources are distributed throughout the <a href="http://denvermetrodata.org/neighborhood/globeville" target=_blank rel="noopener noreferrer">Globeville</a> and <a href="http://denvermetrodata.org/neighborhood/elyria-swansea" target=_blank rel="noopener noreferrer">Elyria-Swansea</a> neighborhoods, in addition to the city at large. Check out the project <a href="https://github.com/ezagala/intoTheGrowHaus" target=_blank rel="noopener noreferrer">here</a>. 
+                            I'm Eric. I'm a web developer based in Denver, CO. I write code with the intent to help cities become more just, efficient and livible places. I'm currently working with <a href="https://www.thegrowhaus.org/" target=_blank rel="noopener noreferrer">The GrowHaus</a> to devise intuitive ways to show how their resources are distributed throughout the Globeville and Elyria-Swansea neighborhoods, in addition to the city at large. Check out the project <a href="https://intense-sea-51551.herokuapp.com/" target=_blank rel="noopener noreferrer">here</a>. 
                         </p>
                         <p>
-                            Other projects, like an <a href="https://github.com/ezagala/bookList" target=_blank rel="noopener noreferrer">interactive reading list</a> and an <a href="https://github.com/ezagala/NYTreactApp" target=_blank rel="noopener noreferrer">app</a> that queries the New York Times' archives, are available for viewing on GitHub. 
+                            Work for The GrowHaus and other code, like an <a href="https://calm-scrubland-32020.herokuapp.com/" target=_blank rel="noopener noreferrer">interactive reading list</a> and an <a href="https://remembrance-drake-33191.herokuapp.com/" target=_blank rel="noopener noreferrer">app</a> that queries the New York Times' archives, are available on GitHub. 
                         </p>
                     </div>
                 </div>
