--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <div class="col-xm col-md-7">
                         <h1 id="hello">Hello.</h1>
                         <p id="blurb">
-                            I'm Eric. I'm a web developer based in Denver, CO. I write code with the intent to help cities become more just, efficient and livible places. I'm currently working with <a href="https://www.thegrowhaus.org/" target=_blank rel="noopener noreferrer">The GrowHaus</a> to devise intuitive ways to show how their resources are distributed throughout the Globeville and Elyria-Swansea neighborhoods, in addition to the city at large. Check out the project <a href="https://intense-sea-51551.herokuapp.com/" target=_blank rel="noopener noreferrer">here</a>. 
+                            I'm Eric. I'm a web developer based in Denver, CO. I write code with the intent to help cities become more just, efficient and livible places. I'm currently working with <a class="bodyLink" href="https://www.thegrowhaus.org/" target=_blank rel="noopener noreferrer">The GrowHaus</a> to devise intuitive ways to show how their resources are distributed throughout the Globeville and Elyria-Swansea neighborhoods, in addition to the city at large. Check out the project <a class="bodyLink" href="https://intense-sea-51551.herokuapp.com/" target=_blank rel="noopener noreferrer">here</a>. 
                         </p>
                         <p>
-                            Work for The GrowHaus and other code, like an <a href="https://calm-scrubland-32020.herokuapp.com/" target=_blank rel="noopener noreferrer">interactive reading list</a> and an <a href="https://remembrance-drake-33191.herokuapp.com/" target=_blank rel="noopener noreferrer">app</a> that queries the New York Times' archives, are available on GitHub. 
+                            Work for The GrowHaus and other code, like an <a class="bodyLink" href="https://calm-scrubland-32020.herokuapp.com/" target=_blank rel="noopener noreferrer">interactive reading list</a> and an <a class="bodyLink" href="https://remembrance-drake-33191.herokuapp.com/" target=_blank rel="noopener noreferrer">app</a> that queries the New York Times' archives, are available on GitHub. 
                         </p>
                     </div>
                 </div>
